--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,6 @@ body{
     font-size: var(--fontSize);
     line-height: var(lineHeight);
     position: relative;
-    overflow-x: hidden;
 }
 
 .wrapper{
